Can not connect to Windows Server 2012 R2
When connecting to a Windows Server 2012 R2, I could following messages on the console. No image is shown:
[21:28:35:407] [18596:18599] [INFO][com.freerdp.gdi] - Local framebuffer format PIXEL_FORMAT_BGRA32
[21:28:35:407] [18596:18599] [INFO][com.freerdp.gdi] - Remote framebuffer format PIXEL_FORMAT_RGB16
[21:28:35:480] [18596:18596] [ERROR][com.freerdp.core.update] - [0x05] Cache Bitmap V2 (Compressed) - SERVER BUG: The support for this feature was not announced! Use /relax-order-checks to ignore
[21:28:35:480] [18596:18596] [ERROR][com.freerdp.core.update] - order flags 03 failed
[21:28:35:480] [18596:18596] [ERROR][com.freerdp.core.fastpath] - Fastpath update Orders [0] failed, status 0
[21:28:35:480] [18596:18596] [ERROR][com.freerdp.core.fastpath] - fastpath_recv_update() - -1
[21:28:35:480] [18596:18596] [ERROR][com.freerdp.core.fastpath] - fastpath_recv_update_data() fail
[21:28:35:480] [18596:18596] [ERROR][com.freerdp.core.transport] - transport_check_fds: transport->ReceiveCallback() - -3
[21:28:35:480] [18596:18596] [ERROR][com.freerdp.core] - freerdp_check_fds() failed - 0
When I remove the changes to the OrderSupport settings in frdp_pre_connect in src/frdp-session.c, it works as expected.
Can this settings be removed?