src/frdp-session.c
@@ -388,33 +388,6 @@ frdp_authenticate (freerdp  *freerdp_session,
 static gboolean
 frdp_pre_connect (freerdp *freerdp_session)
 {
-  rdpSettings *settings = freerdp_session->settings;
-
-  settings->OrderSupport[NEG_DSTBLT_INDEX] = TRUE;
-  settings->OrderSupport[NEG_PATBLT_INDEX] = TRUE;
-  settings->OrderSupport[NEG_SCRBLT_INDEX] = TRUE;
-  settings->OrderSupport[NEG_OPAQUE_RECT_INDEX] = TRUE;
-  settings->OrderSupport[NEG_DRAWNINEGRID_INDEX] = FALSE;
-  settings->OrderSupport[NEG_MULTIDSTBLT_INDEX] = FALSE;
-  settings->OrderSupport[NEG_MULTIPATBLT_INDEX] = FALSE;
-  settings->OrderSupport[NEG_MULTISCRBLT_INDEX] = FALSE;
-  settings->OrderSupport[NEG_MULTIOPAQUERECT_INDEX] = TRUE;
-  settings->OrderSupport[NEG_MULTI_DRAWNINEGRID_INDEX] = FALSE;
-  settings->OrderSupport[NEG_LINETO_INDEX] = TRUE;
-  settings->OrderSupport[NEG_POLYLINE_INDEX] = TRUE;
-  settings->OrderSupport[NEG_MEMBLT_INDEX] = TRUE;
-  settings->OrderSupport[NEG_MEM3BLT_INDEX] = FALSE;
-  settings->OrderSupport[NEG_MEMBLT_V2_INDEX] = TRUE;
-  settings->OrderSupport[NEG_MEM3BLT_V2_INDEX] = FALSE;
-  settings->OrderSupport[NEG_SAVEBITMAP_INDEX] = FALSE;
-  settings->OrderSupport[NEG_GLYPH_INDEX_INDEX] = TRUE;
-  settings->OrderSupport[NEG_FAST_INDEX_INDEX] = TRUE;
-  settings->OrderSupport[NEG_FAST_GLYPH_INDEX] = FALSE;
-  settings->OrderSupport[NEG_POLYGON_SC_INDEX] = FALSE;
-  settings->OrderSupport[NEG_POLYGON_CB_INDEX] = FALSE;
-  settings->OrderSupport[NEG_ELLIPSE_SC_INDEX] = FALSE;
-  settings->OrderSupport[NEG_ELLIPSE_CB_INDEX] = FALSE;
-
   return TRUE;
 }
 
